@@ -1,4 +1,4 @@
-%define glibcrelease 22
+%define glibcrelease 1
 %define run_glibc_tests 1
 %define auxarches i586 i686 athlon sparcv9v sparc64v alphaev6
 %define xenarches i686 athlon
@@ -1010,7 +1010,8 @@ rm -f *.filelist*
 %endif
 
 %changelog
-* Wed Oct 17 2007 Jakub Jelinek <jakub@redhat.com> 2.6.90-22
+* Wed Oct 17 2007 Jakub Jelinek <jakub@redhat.com> 2.7-1
+- glibc 2.7 release
 - fix tzfile.c for times after last transition (#333561)
 - fix sem_post@GLIBC_2.0 on i?86
 - appease valgrind in libpthread.so initialization
