@@ -1,5 +1,13 @@
 2007-10-17  Ulrich Drepper  <drepper@redhat.com>
 
+	* version.h (VERSION): Bump to 2.7.
+	* include/features.h (__GLIBC_MINOR__): Bump to 7.
+
+	[BZ #5186]
+	* time/tzset.c (__tz_convert): Don't force testing for a change of
+	TZ if not called from localtime.  But then also see whether the
+	file changed, in case __use_tzfile is set.
+
 	* sysdeps/unix/sysv/linux/i386/bits/fcntl.h: Define F_DUPFD_CLOEXEC.
 	* sysdeps/unix/sysv/linux/ia64/bits/fcntl.h: Likewise.
 	* sysdeps/unix/sysv/linux/powerpc/bits/fcntl.h: Likewise.
